Revert "Cleaner code update"
This reverts commit 8f6cea5ca42fa92a82edbbed5fb56905a2034ae5.